--- a/index.html
+++ b/index.html
@@ -113,6 +113,15 @@ body {
   font-weight: bold;
   display: block;
   margin-bottom: 5px;
+ font-size: 12px;       /* slightly bigger for readability */
+}
+
+/* Minimize only the label for “Pasteboard for Marathi Text” */
+.two-part-container label[for="general-purpose-input"] {
+  font-size: 12px !important;
+  font-weight: bold;
+  display: block;
+  margin-bottom: 5px;
 }
 
 /* =================== Chart Area =================== */
@@ -215,8 +224,6 @@ button.secondary {
   font-size: 13px;
 }
 
-
-
 /* =================== Data Input =================== */
 #data-input {
   flex: 1;
@@ -263,6 +270,7 @@ button.secondary {
   padding: 4px 6px;
   text-align: left;
   line-height: 1;
+  font-size: 12px; 
 }
 
 #data-table th {
@@ -288,10 +296,10 @@ button.secondary {
   background-color: #e74c3c;
   color: white;
   border: none;
-  padding: 4px 8px;
-  border-radius: 4px;
+  padding: 2px 6px;
+  border-radius: 6px;
   cursor: pointer;
-  font-size: 9px;
+  font-size: 10px;
   margin-left: 8px; /* Added a small space to the left of the button */
 }
 #data-table .remove-row-btn:hover,
